# showMeTheControls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: AOCL_Support.h.9227B1ACE7DB624B.idx  AlignedBox.h.205518D0515E42A6.idx  AmbiVector.h.5E1CFCE1AE4C9017.idx  Amd.h.1B46A82D0E820E55.idx  AngleAxis.h.595A0070E5CC7791.idx  ArithmeticSequence.h.B7BBAEF1AC87758F.idx  Array.h.5FB8FBF1FB0D3163.idx  ArrayBase.h.A2D3E8FB4C5B4349.idx  ArrayCwiseBinaryOps.inc.27E898ACD8EB4082.idx  ArrayCwiseUnaryOps.inc.F0F9C55494125B46.idx  ArrayWrapper.h.93DFE13039B80C3A.idx  Assert.h.8B1F61C30B3B2365.idx  Assign.h.D8FA9A329BABFA9E.idx  AssignEvaluator.h.77D2BE596B5A2FE1.idx  AssignmentFunctors.h.BC72891D049BB1E3.idx  BDCSVD.h.834D592067FBE0BE.idx  BFloat16.h.AD915D1E1C4FB1EE.idx  BandMatrix.h.41047245E7A1429B.idx  BasicPreconditioners.h.11038108AFD1F856.idx  BiCGSTAB.h.26F52EC3B05C2078.idx  BinaryFunctors.h.2A1E79984D34E5D1.idx  BlasUtil.h.C2A3C3C27BC26279.idx  Block.h.F2529747674128F4.idx  BlockHouseholder.h.E3CD58E4A6ED77B2.idx  BlockMethods.inc.75656259C8F39044.idx  Cholesky.8841E6504764097D.idx  ColPivHouseholderQR.h.F5E66A0D0652312E.idx  CommaInitializer.h.43B2E97F11D6DF9D.idx  CommonCwiseBinaryOps.inc.5BEFAC32B3531DA0.idx  CommonCwiseUnaryOps.inc.DC0E6828B5BA2BB3.idx  CompleteOrthogonalDecomposition.h.006811440547FB80.idx  Complex.h.1AFEB8730A3B4048.idx  ComplexEigenSolver.h.C0DFFDD19DDBD59B.idx  ComplexQZ.h.C638D531A05942CF.idx  ComplexSchur.h.FA1A8A1041E86684.idx  CompressedStorage.h.738708A1B14DBA44.idx  ConditionEstimator.h.3C22FAA6A9A2F358.idx  ConfigureVectorization.h.00E926EB01727199.idx  ConjHelper.h.E1F99F588A095DD8.idx  ConjugateGradient.h.5CC43465718530AE.idx  (+337 more)
scenarios/: dc_motor_pid.cfg  observer_example.cfg  pendulum_pole_placement.cfg
src/: app.cpp  app.h  main.cpp
src/control/: pid.cpp  pid.h  state_space.cpp  state_space.h  transfer_function.cpp  transfer_function.h
src/designer/: block_designer.cpp  block_designer.h  block_designer_ui.cpp  control_math.cpp  control_math.h
src/systems/: second_order.cpp  second_order.h  system.h
src/ui/: pid_panel.cpp  pid_panel.h  state_space_panel.cpp  state_space_panel.h
src/viz/: zplane.cpp  zplane.h
tests/: designer_tests.cpp
webapp/: README.md  supabase_schema.sql
webapp/backend/: go.mod  main.go
webapp/backend/api/: handlers.go
webapp/backend/simulation/: pid.go  quadcopter.go
webapp/frontend/: .env  package-lock.json  package.json  vite.config.js
webapp/frontend/src/: App.jsx  index.css
webapp/frontend/src/components/: ControlPanel.jsx  DroneCanvas.jsx  MetricsPanel.jsx  PlotPanel.jsx  PresetGallery.jsx  SimCanvas.jsx
webapp/frontend/src/components/vehicles/: F1TenthScene.jsx  PendulumScene.jsx  QuadcopterScene.jsx
webapp/frontend/src/simulation/: dare.js  f1tenth.js  lqr.js  pendulum.js  quadcopter.js
webapp/frontend/src/store/: useSimStore.js
